# md2ms

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: pii.md  standalone.md
examples/Obsidian/Blank/md2ms/.obsidian/: workspace.json
examples/Obsidian/Blank/md2ms/Writing/: PII.md
examples/novella_with_parts/: PII.md  metadata.md
examples/novella_with_parts/Act 1/: metadata.md
examples/novella_with_parts/Act 1/Chapter 1/: metadata.md  scene 1.md
examples/novella_with_parts/Act 1/Chapter 2/: scene 1.md
examples/novella_with_parts/Act 1/Chapter 3/: scene 1.md
examples/novella_with_parts/Act 2/: metadata.md
examples/novella_with_parts/Act 2/Chapter 4/: scene 1.md
examples/novella_with_parts/Act 2/Chapter 5/: scene 1.md  scene 2.md
examples/novella_with_parts/Act 2/Chapter 6/: scene 1.md
examples/novella_with_parts/Act 3/: metadata.md
examples/novella_with_parts/Act 3/Chapter 7/: scene 1.md
examples/novella_with_parts/Act 3/Chapter 8/: scene 1.md
examples/novella_with_parts/Act 3/Chapter 9/: scene 1.md
examples/short/: metadata.md  scene1.md  scene2.md
examples/standalone/: research.md
src/: cmark.rs  constants.rs  context.rs  error.rs  lib.rs  main.rs  markdown.rs  metadata.rs  obsidian.rs  pii.rs  utils.rs
src/obsidian_commander/: mod.rs
src/obsidian_shellcommands/: mod.rs
