[package]
name = "md2ms"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool for converting Markdown files to Microsoft Word documents."
homepage = "https://github.com/adamisrael/md2ms"
repository = "https://github.com/adamisrael/md2ms"
readme = "README.md"

[dependencies]
# Need to use the git version of docx-rs to enable inserting page numbers into the header
docx-rs = { git = "https://github.com/bokuweb/docx-rs.git" }
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.218"
words-count = "0.1.6"
yaml-front-matter = "0.1.0"
regex = "1.11.1"
pulldown-cmark = { version = "0.13.0", default-features = false }
shellexpand = "3.1.0"
serde_json = "1.0.140"

# Could lock this to version 0.1.1
# obsidian-rs = { version = "0.1.1" }
obsidian-rs = { git = "https://github.com/adamisrael/obsidian-rs.git" }
# obsidian-rs = { path = "../obsidian-rs" }
rand = "0.9.1"
